// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SIRI-SX Generator > correctly generates Disruptions CSV 1`] = `
"Organisation,ID,Validity start,Validity end,Publication start,Publication end,Reason,Planned,Modes affected,Operators affected,Services affected,Stops affected
Test Org,acde070d-8c4c-4f0d-9d8a-162843c10333,2023-03-10T12:00:00.000Z,,2023-03-10T12:00:00.000Z,,staffInWrongPlace,true,bus;tram,FSYO,,"
`;

exports[`SIRI-SX Generator > correctly generates Disruptions JSON 1`] = `
[
  {
    "consequences": [
      {
        "consequenceOperators": [
          {
            "operatorNoc": "FSYO",
            "operatorPublicName": "Operator Name",
          },
        ],
        "consequenceType": "operatorWide",
        "description": "Some consequence description",
        "disruptionDelay": "40",
        "disruptionSeverity": "severe",
        "removeFromJourneyPlanners": "yes",
        "vehicleMode": "bus",
      },
      {
        "consequenceType": "networkWide",
        "description": "Some consequence description",
        "disruptionSeverity": "slight",
        "removeFromJourneyPlanners": "no",
        "vehicleMode": "tram",
      },
    ],
    "description": "Test description",
    "displayId": "8fg3ha",
    "disruptionId": "acde070d-8c4c-4f0d-9d8a-162843c10333",
    "disruptionReason": "staffInWrongPlace",
    "disruptionType": "planned",
    "history": [
      {
        "datetime": "2023-05-19T14:40:00Z",
        "historyItems": [
          "some text",
        ],
        "status": "PENDING_APPROVAL",
        "user": "user",
      },
      {
        "datetime": "2023-05-13T14:45:00Z",
        "historyItems": [
          "Disruption created and published",
        ],
        "status": "PUBLISHED",
        "user": "user",
      },
    ],
    "lastUpdated": "2023-05-11T14:40:00Z",
    "organisation": {
      "id": "6f6435e3-a485-4c8c-8c29-e121b1e76802",
      "name": "Test Org",
    },
    "publishStartDate": "10/03/2023",
    "publishStartTime": "1200",
    "summary": "Some summary",
    "validity": [
      {
        "disruptionEndDate": "17/03/2023",
        "disruptionEndTime": "1700",
        "disruptionStartDate": "10/03/2023",
        "disruptionStartTime": "1200",
      },
      {
        "disruptionStartDate": "18/03/2023",
        "disruptionStartTime": "1200",
      },
    ],
  },
]
`;

exports[`SIRI-SX Generator > correctly generates SIRI-SX XML 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" standalone=\\"yes\\"?>
<Siri version=\\"2.0\\" xmlns=\\"http://www.siri.org.uk/siri\\" xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\" xsi:schemaLocation=\\"http://www.siri.org.uk/siri http://www.siri.org.uk/schema/2.0/xsd/siri.xsd\\">
    <ServiceDelivery>
        <ResponseTimestamp>2023-08-17T00:00:00Z</ResponseTimestamp>
        <ProducerRef>DepartmentForTransport</ProducerRef>
        <ResponseMessageIdentifier>abcde-fghij-klmno-pqrst</ResponseMessageIdentifier>
        <SituationExchangeDelivery>
            <ResponseTimestamp>2023-08-17T00:00:00Z</ResponseTimestamp>
            <Situations>
                <PtSituationElement>
                    <CreationTime>2023-05-13T14:45:00Z</CreationTime>
                    <VersionedAtTime>2023-05-11T14:40:00Z</VersionedAtTime>
                    <ParticipantRef>TestOrg</ParticipantRef>
                    <SituationNumber>acde070d-8c4c-4f0d-9d8a-162843c10333</SituationNumber>
                    <Source>
                        <SourceType>feed</SourceType>
                        <TimeOfCommunication>2023-08-17T00:00:00.000Z</TimeOfCommunication>
                    </Source>
                    <Progress>open</Progress>
                    <ValidityPeriod>
                        <StartTime>2023-03-10T12:00:00.000Z</StartTime>
                        <EndTime>2023-03-17T17:00:00.000Z</EndTime>
                    </ValidityPeriod>
                    <ValidityPeriod>
                        <StartTime>2023-03-18T12:00:00.000Z</StartTime>
                    </ValidityPeriod>
                    <PublicationWindow>
                        <StartTime>2023-03-10T12:00:00.000Z</StartTime>
                    </PublicationWindow>
                    <PersonnelReason>staffInWrongPlace</PersonnelReason>
                    <Planned>true</Planned>
                    <Summary>Some summary</Summary>
                    <Description>Test description</Description>
                    <Consequences>
                        <Consequence>
                            <Condition>unknown</Condition>
                            <Severity>severe</Severity>
                            <Affects>
                                <Operators>
                                    <AffectedOperator>
                                        <OperatorRef>FSYO</OperatorRef>
                                        <OperatorName>Operator Name</OperatorName>
                                    </AffectedOperator>
                                </Operators>
                                <Networks>
                                    <AffectedNetwork>
                                        <VehicleMode>bus</VehicleMode>
                                        <AllLines/>
                                    </AffectedNetwork>
                                </Networks>
                            </Affects>
                            <Advice>
                                <Details>Some consequence description</Details>
                            </Advice>
                            <Blocking>
                                <JourneyPlanner>true</JourneyPlanner>
                            </Blocking>
                            <Delays>
                                <Delay>PT40M</Delay>
                            </Delays>
                        </Consequence>
                        <Consequence>
                            <Condition>unknown</Condition>
                            <Severity>slight</Severity>
                            <Affects>
                                <Operators>
                                    <AllOperators/>
                                </Operators>
                                <Networks>
                                    <AffectedNetwork>
                                        <VehicleMode>tram</VehicleMode>
                                        <AllLines/>
                                    </AffectedNetwork>
                                </Networks>
                            </Affects>
                            <Advice>
                                <Details>Some consequence description</Details>
                            </Advice>
                            <Blocking>
                                <JourneyPlanner>false</JourneyPlanner>
                            </Blocking>
                        </Consequence>
                    </Consequences>
                </PtSituationElement>
            </Situations>
        </SituationExchangeDelivery>
    </ServiceDelivery>
</Siri>"
`;

exports[`SIRI-SX Generator > correctly generates SIRI-SX XML where creationDate is present 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\" standalone=\\"yes\\"?>
<Siri version=\\"2.0\\" xmlns=\\"http://www.siri.org.uk/siri\\" xmlns:xsi=\\"http://www.w3.org/2001/XMLSchema-instance\\" xsi:schemaLocation=\\"http://www.siri.org.uk/siri http://www.siri.org.uk/schema/2.0/xsd/siri.xsd\\">
    <ServiceDelivery>
        <ResponseTimestamp>2023-03-06T12:00:00Z</ResponseTimestamp>
        <ProducerRef>DepartmentForTransport</ProducerRef>
        <ResponseMessageIdentifier>abcde-fghij-klmno-pqrst</ResponseMessageIdentifier>
        <SituationExchangeDelivery>
            <ResponseTimestamp>2023-03-06T12:00:00Z</ResponseTimestamp>
            <Situations>
                <PtSituationElement>
                    <CreationTime>2023-05-13T14:45:00Z</CreationTime>
                    <VersionedAtTime>2023-05-11T14:40:00Z</VersionedAtTime>
                    <ParticipantRef>TestOrg</ParticipantRef>
                    <SituationNumber>acde070d-8c4c-4f0d-9d8a-162843c10333</SituationNumber>
                    <Source>
                        <SourceType>feed</SourceType>
                        <TimeOfCommunication>2023-08-17T00:00:00.000Z</TimeOfCommunication>
                    </Source>
                    <Progress>open</Progress>
                    <ValidityPeriod>
                        <StartTime>2023-03-10T12:00:00.000Z</StartTime>
                        <EndTime>2023-03-17T17:00:00.000Z</EndTime>
                    </ValidityPeriod>
                    <ValidityPeriod>
                        <StartTime>2023-03-18T12:00:00.000Z</StartTime>
                    </ValidityPeriod>
                    <PublicationWindow>
                        <StartTime>2023-03-10T12:00:00.000Z</StartTime>
                    </PublicationWindow>
                    <PersonnelReason>staffInWrongPlace</PersonnelReason>
                    <Planned>true</Planned>
                    <Summary>Some summary</Summary>
                    <Description>Test description</Description>
                    <Consequences>
                        <Consequence>
                            <Condition>unknown</Condition>
                            <Severity>severe</Severity>
                            <Affects>
                                <Operators>
                                    <AffectedOperator>
                                        <OperatorRef>FSYO</OperatorRef>
                                        <OperatorName>Operator Name</OperatorName>
                                    </AffectedOperator>
                                </Operators>
                                <Networks>
                                    <AffectedNetwork>
                                        <VehicleMode>bus</VehicleMode>
                                        <AllLines/>
                                    </AffectedNetwork>
                                </Networks>
                            </Affects>
                            <Advice>
                                <Details>Some consequence description</Details>
                            </Advice>
                            <Blocking>
                                <JourneyPlanner>true</JourneyPlanner>
                            </Blocking>
                            <Delays>
                                <Delay>PT40M</Delay>
                            </Delays>
                        </Consequence>
                        <Consequence>
                            <Condition>unknown</Condition>
                            <Severity>slight</Severity>
                            <Affects>
                                <Operators>
                                    <AllOperators/>
                                </Operators>
                                <Networks>
                                    <AffectedNetwork>
                                        <VehicleMode>tram</VehicleMode>
                                        <AllLines/>
                                    </AffectedNetwork>
                                </Networks>
                            </Affects>
                            <Advice>
                                <Details>Some consequence description</Details>
                            </Advice>
                            <Blocking>
                                <JourneyPlanner>false</JourneyPlanner>
                            </Blocking>
                        </Consequence>
                    </Consequences>
                </PtSituationElement>
            </Situations>
        </SituationExchangeDelivery>
    </ServiceDelivery>
</Siri>"
`;
